tdf#125606 Qt5 directly show tooltips + respect the help area

I'm not sure why this redirection was implemented, which also ommited
the provided help area. I tried hard to use vc::Window code in the
beginning, but that also mirrors the cursor position for the window.
Using Qt here is simply straight forward, so just do that,

Reviewed-on: https://gerrit.libreoffice.org/74548
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit ab5f341efd144adb6b7d0e00fece76a2153acd10)
Reviewed-on: https://gerrit.libreoffice.org/74571
(cherry picked from commit e3988fa785c0430ae708527cbc5a7baa6d9d55a6)

Change-Id: Ia8c4efc1e43b915c4b071ee26d4da37d7580817c