vcl/qt5/Qt5Widget.cxx
@@ -38,7 +38,6 @@
 #include <QtGui/QTextCharFormat>
 #include <QtGui/QWheelEvent>
 #include <QtWidgets/QMainWindow>
-#include <QtWidgets/QToolTip>
 #include <QtWidgets/QWidget>
 
 #include <cairo.h>
@@ -430,12 +429,6 @@ void Qt5Widget::keyReleaseEvent(QKeyEvent* pEvent)
 void Qt5Widget::focusInEvent(QFocusEvent*) { m_rFrame.CallCallback(SalEvent::GetFocus, nullptr); }
 
 void Qt5Widget::focusOutEvent(QFocusEvent*) { m_rFrame.CallCallback(SalEvent::LoseFocus, nullptr); }
-
-void Qt5Widget::showTooltip(const OUString& rTooltip)
-{
-    QPoint pt = QCursor::pos();
-    QToolTip::showText(pt, toQString(rTooltip));
-}
 
 Qt5Widget::Qt5Widget(Qt5Frame& rFrame, Qt::WindowFlags f)
     : QWidget(Q_NULLPTR, f)
